[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/easy_charts/ScatterChart2D/scatter_chart2D.gd" type="Script" id=1]
[ext_resource path="res://addons/easy_charts/Utilities/Point/point_data.tscn" type="PackedScene" id=2]



[node name="ScatterChart2D" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "[ScatterChart2D] - General purpose node for Scatter Charts

A scatter plot (also called a scatterplot, scatter graph, scatter chart, scattergram, or scatter diagram)
 is a type of plot or mathematical diagram using Cartesian coordinates to display values for typically two variables 
for a set of data. If the points are coded (color/shape/size), one additional variable can be displayed. 
The data are displayed as a collection of points, each having the value of one variable determining the position on 
the horizontal axis and the value of the other variable determining the position on the vertical axis."
}
function_colors = [ "#1e1e1e", "#1e1e1e", "#1e1e1e", "#1e1e1e" ]

[node name="Grid" type="Node2D" parent="."]

[node name="VLine" type="Line2D" parent="Grid"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 0.792157, 0.792157, 0.792157, 1 )

[node name="HLine" type="Line2D" parent="Grid"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 0.792157, 0.792157, 0.792157, 1 )

[node name="Outlines" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 2, 0, 2, 2, 0, 2, 0, 0 )
width = 2.0
default_color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="Functions" type="Node2D" parent="."]

[node name="OutlinesTween" type="Tween" parent="."]

[node name="GridTween" type="Tween" parent="."]

[node name="PointTween" type="Tween" parent="."]

[node name="PointData" parent="." instance=ExtResource( 2 )]

[node name="PointData" parent="PointData" index="0"]
visible = false
margin_left = 71.2491
margin_top = -146.673
margin_right = 71.1131
margin_bottom = -145.873

[editable path="PointData"]
